--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,7 +27,7 @@ jobs:
         npm ci
         npm run generate
       env:
-        NUXT_APP_BASE_URL: ${{ vars.NUXT_APP_BASE_URL  }}
+        NUXT_APP_BASE_URL: /degen-tavern/
 
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
