--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@heroicons/vue": "^2.2.0",
     "@nuxt/eslint": "^0.7.5",
     "@nuxt/icon": "^1.10.3",
+    "@nuxt/ui": "^2.21.0",
+    "@nuxt/ui-pro": "^1.7.0",
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "@vueuse/nuxt": "^12.5.0",
     "eslint": "^9.19.0",
     "nuxt": "^3.15.3",
     "vue": "latest",
